fix(ui5-textarea): fix text vertical alignment (#1668)
Issue: when growing and growing-max-lines="1" are set the text in the input field is a little downwards and not vertically centred. Now it is fixed and the new metrics for padding and height are the ones the openui5 TextArea uses.

FIXES: https://github.com/SAP/ui5-webcomponents/issues/1661

--- a/packages/main/src/themes/TextArea.css
+++ b/packages/main/src/themes/TextArea.css
@@ -39,6 +39,7 @@
 
 .ui5-textarea-root {
 	height: 100%;
+	min-height: var(--_ui5_input_height);
 	display: inline-flex;
 	vertical-align: top;
 	outline: none;
@@ -52,7 +53,7 @@
 	width: 100%;
 	height: 100%;
 	margin: 0;
-	padding: 0.5625rem 0.6875rem;
+	padding: var(--_ui5_textarea_padding);
 	line-height: 1.4;
 	box-sizing: border-box;
 	color: inherit;
@@ -85,7 +86,7 @@
 	visibility: hidden;
 	width: 100%;
 	word-break: break-all;
-	padding: 0.5625rem 0.6875rem;
+	padding: var(--_ui5_textarea_padding);
 	font-size: var(--sapFontSize);
 	font-family: var(--sapFontFamily);
 	white-space: pre-wrap;
